Styling issues in search results page on mobile

--- a/src/targets/beacon/styles/views/room-products.less
+++ b/src/targets/beacon/styles/views/room-products.less
@@ -531,8 +531,6 @@ room-products {
             .value {
               .viewport-mobile & {
                 display: block;
-                float: none;
-                clear: none;
                 font-size: 18px;
               }
             }
